[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/world/save.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/saves/save_0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/saves/save_1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Save" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.18

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.6

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
